psps/b/parser.output
Grammar

    0 $accept: Program $end

    1 Program: pocetak_token NizNaredbi kraj_token

    2 NizNaredbi: NizNaredbi ';' Naredba
    3           | Naredba

    4 Naredba: ispisi_token '(' niska_token ')'
    5        | ispisi_token '(' E ')'
    6        | id_token dodela_token E
    7        | id_token dodela_token niska_token
    8        | ispisi_token '(' id_token ')'

    9 E: E '+' E
   10  | E '-' E
   11  | E '*' E
   12  | E mod_token E
   13  | E div_token E
   14  | num_token


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 5 8
')' (41) 4 5 8
'*' (42) 11
'+' (43) 9
'-' (45) 10
';' (59) 2
error (256)
pocetak_token (258) 1
kraj_token (259) 1
ispisi_token (260) 4 5 8
mod_token (261) 12
div_token (262) 13
dodela_token (263) 6 7
num_token (264) 14
niska_token (265) 4 7
id_token (266) 6 7 8


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
Program (19)
    on left: 1, on right: 0
NizNaredbi (20)
    on left: 2 3, on right: 1 2
Naredba (21)
    on left: 4 5 6 7 8, on right: 2 3
E (22)
    on left: 9 10 11 12 13 14, on right: 5 6 9 10 11 12 13


State 0

    0 $accept: . Program $end

    pocetak_token  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: pocetak_token . NizNaredbi kraj_token

    ispisi_token  shift, and go to state 3
    id_token      shift, and go to state 4

    NizNaredbi  go to state 5
    Naredba     go to state 6


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 7


State 3

    4 Naredba: ispisi_token . '(' niska_token ')'
    5        | ispisi_token . '(' E ')'
    8        | ispisi_token . '(' id_token ')'

    '('  shift, and go to state 8


State 4

    6 Naredba: id_token . dodela_token E
    7        | id_token . dodela_token niska_token

    dodela_token  shift, and go to state 9


State 5

    1 Program: pocetak_token NizNaredbi . kraj_token
    2 NizNaredbi: NizNaredbi . ';' Naredba

    kraj_token  shift, and go to state 10
    ';'         shift, and go to state 11


State 6

    3 NizNaredbi: Naredba .

    $default  reduce using rule 3 (NizNaredbi)


State 7

    0 $accept: Program $end .

    $default  accept


State 8

    4 Naredba: ispisi_token '(' . niska_token ')'
    5        | ispisi_token '(' . E ')'
    8        | ispisi_token '(' . id_token ')'

    num_token    shift, and go to state 12
    niska_token  shift, and go to state 13
    id_token     shift, and go to state 14

    E  go to state 15


State 9

    6 Naredba: id_token dodela_token . E
    7        | id_token dodela_token . niska_token

    num_token    shift, and go to state 12
    niska_token  shift, and go to state 16

    E  go to state 17


State 10

    1 Program: pocetak_token NizNaredbi kraj_token .

    $default  reduce using rule 1 (Program)


State 11

    2 NizNaredbi: NizNaredbi ';' . Naredba

    ispisi_token  shift, and go to state 3
    id_token      shift, and go to state 4

    Naredba  go to state 18


State 12

   14 E: num_token .

    $default  reduce using rule 14 (E)


State 13

    4 Naredba: ispisi_token '(' niska_token . ')'

    ')'  shift, and go to state 19


State 14

    8 Naredba: ispisi_token '(' id_token . ')'

    ')'  shift, and go to state 20


State 15

    5 Naredba: ispisi_token '(' E . ')'
    9 E: E . '+' E
   10  | E . '-' E
   11  | E . '*' E
   12  | E . mod_token E
   13  | E . div_token E

    mod_token  shift, and go to state 21
    div_token  shift, and go to state 22
    '+'        shift, and go to state 23
    '-'        shift, and go to state 24
    '*'        shift, and go to state 25
    ')'        shift, and go to state 26


State 16

    7 Naredba: id_token dodela_token niska_token .

    $default  reduce using rule 7 (Naredba)


State 17

    6 Naredba: id_token dodela_token E .
    9 E: E . '+' E
   10  | E . '-' E
   11  | E . '*' E
   12  | E . mod_token E
   13  | E . div_token E

    mod_token  shift, and go to state 21
    div_token  shift, and go to state 22
    '+'        shift, and go to state 23
    '-'        shift, and go to state 24
    '*'        shift, and go to state 25

    $default  reduce using rule 6 (Naredba)


State 18

    2 NizNaredbi: NizNaredbi ';' Naredba .

    $default  reduce using rule 2 (NizNaredbi)


State 19

    4 Naredba: ispisi_token '(' niska_token ')' .

    $default  reduce using rule 4 (Naredba)


State 20

    8 Naredba: ispisi_token '(' id_token ')' .

    $default  reduce using rule 8 (Naredba)


State 21

   12 E: E mod_token . E

    num_token  shift, and go to state 12

    E  go to state 27


State 22

   13 E: E div_token . E

    num_token  shift, and go to state 12

    E  go to state 28


State 23

    9 E: E '+' . E

    num_token  shift, and go to state 12

    E  go to state 29


State 24

   10 E: E '-' . E

    num_token  shift, and go to state 12

    E  go to state 30


State 25

   11 E: E '*' . E

    num_token  shift, and go to state 12

    E  go to state 31


State 26

    5 Naredba: ispisi_token '(' E ')' .

    $default  reduce using rule 5 (Naredba)


State 27

    9 E: E . '+' E
   10  | E . '-' E
   11  | E . '*' E
   12  | E . mod_token E
   12  | E mod_token E .
   13  | E . div_token E

    $default  reduce using rule 12 (E)


State 28

    9 E: E . '+' E
   10  | E . '-' E
   11  | E . '*' E
   12  | E . mod_token E
   13  | E . div_token E
   13  | E div_token E .

    $default  reduce using rule 13 (E)


State 29

    9 E: E . '+' E
    9  | E '+' E .
   10  | E . '-' E
   11  | E . '*' E
   12  | E . mod_token E
   13  | E . div_token E

    mod_token  shift, and go to state 21
    div_token  shift, and go to state 22
    '*'        shift, and go to state 25

    $default  reduce using rule 9 (E)


State 30

    9 E: E . '+' E
   10  | E . '-' E
   10  | E '-' E .
   11  | E . '*' E
   12  | E . mod_token E
   13  | E . div_token E

    mod_token  shift, and go to state 21
    div_token  shift, and go to state 22
    '*'        shift, and go to state 25

    $default  reduce using rule 10 (E)


State 31

    9 E: E . '+' E
   10  | E . '-' E
   11  | E . '*' E
   11  | E '*' E .
   12  | E . mod_token E
   13  | E . div_token E

    $default  reduce using rule 11 (E)
